--- a/_posts/2021-02-27-test.md
+++ b/_posts/2021-02-27-test.md
@@ -118,3 +118,22 @@ text = '8' / '2';
 console.log(`value: ${text}, type: ${typeof text}`);
 console.log(text.charAt(0)); //중간에 다른사람이 text를 숫자로 바꿔버리면 에러가 나는 상황 발생!
 ```
+
+### html code 입력해봄
+
+```
+    <body>
+        <div class="box">
+            <h2>
+                공지사항
+                <img src="more_btn.png" alt="img">
+            </h2>
+            <ul>
+                <li><a href="#">공지사항 목록입니다.</a></li>
+                <li><a href="#">공지사항 목록입니다.</a></li>
+                <li><a href="#">공지사항 목록입니다.</a></li>
+                <li><a href="#">공지사항 목록입니다.</a></li>
+            </ul>
+        </div>
+    </body>
+```
