dream coding posting

--- a/_posts/2021-02-27-data-type.md
+++ b/_posts/2021-02-27-data-type.md
@@ -1,8 +1,12 @@
 ---
-title: source code test
+title: Javascript(2) - 데이터타입, data types, let vs var, hoisting
 categories: [dev]
 comments: true
 ---
+
+### 드림코딩 엘리 Javascript 강의 (2)
+
+### 데이터타입, data types, let vs var, hoisting
 
 ```js
 // 1. Use strick 바닐라 자바스크립트로 프로그래밍 할때는
@@ -117,23 +121,4 @@ console.log(`value: ${text}, type: ${typeof text}`);
 text = '8' / '2';
 console.log(`value: ${text}, type: ${typeof text}`);
 console.log(text.charAt(0)); //중간에 다른사람이 text를 숫자로 바꿔버리면 에러가 나는 상황 발생!
-```
-
-### html code 입력해봄
-
-```html
-<body>
-    <div class="box">
-        <h2>
-            공지사항
-            <img src="more_btn.png" alt="img" />
-        </h2>
-        <ul>
-            <li><a href="#">공지사항 목록입니다.</a></li>
-            <li><a href="#">공지사항 목록입니다.</a></li>
-            <li><a href="#">공지사항 목록입니다.</a></li>
-            <li><a href="#">공지사항 목록입니다.</a></li>
-        </ul>
-    </div>
-</body>
 ```
