font family update

--- a/_posts/2021-02-23-operator.md
+++ b/_posts/2021-02-23-operator.md
@@ -4,9 +4,7 @@ categories: [dev]
 comments: true
 ---
 
-### 드림코딩 엘리 Javascript 강의 (1)
-
-### 코딩의 기본 operator, if, for loop
+### 드림코딩 엘리 Javascript 강의 (1) - 코딩의 기본 operator, if, for loop
 
 ```js
 //1. String concatenation
