--- a/_posts/2021-02-24-data-type.md
+++ b/_posts/2021-02-24-data-type.md
@@ -4,9 +4,7 @@ categories: [dev]
 comments: true
 ---
 
-### 드림코딩 엘리 Javascript 강의 (2)
-
-### 데이터타입, data types, let vs var, hoisting
+### 드림코딩 엘리 Javascript 강의 (2) - 데이터타입, data types, let vs var, hoisting
 
 ```js
 // 1. Use strick 바닐라 자바스크립트로 프로그래밍 할때는
