--- a/_posts/2021-02-26-class.md
+++ b/_posts/2021-02-26-class.md
@@ -4,9 +4,7 @@ categories: [dev]
 comments: true
 ---
 
-### 드림코딩 엘리 Javascript 강의 (4)
-
-### 클래스와 오브젝트의 차이점 + 객체지향 언어 클래스
+### 드림코딩 엘리 Javascript 강의 (4) - 클래스와 오브젝트의 차이점 + 객체지향 언어 클래스
 
 ```js
 'use strict';
