--- a/_posts/2021-02-28-object.md
+++ b/_posts/2021-02-28-object.md
@@ -4,6 +4,8 @@ categories: [dev]
 comments: true
 ---
 
+### 드림코딩 엘리 Javascript 강의 (5) - 오브젝트 + for..in과 for..of
+
 ```js
 //오브젝트는 키와 밸류의 집합체이다.
 //object = {key : value};
