--- a/_posts/2021-03-05-json.md
+++ b/_posts/2021-03-05-json.md
@@ -1,10 +1,10 @@
 ---
-title: Javascript(10) - Promise 개념부터 활용까지
+title: Javascript(8) - JSON 개념정리와 활용방법
 categories: [study]
 comments: true
 ---
 
-### 드림코딩 엘리 Javascript 강의 (10) - Promise 개념부터 활용까지
+### 드림코딩 엘리 Javascript 강의 (8) - JSON 개념정리와 활용방법
 
 ```js
 //1. Object to JSON
@@ -52,43 +52,4 @@ rabbit.jump();
 
 console.log(rabbit.birthDate.getDate());
 console.log(obj.birthDate.getDate());
-
-//Callback Hell example
-class UserStorage {
-    loginUser(id, password) {
-        return new Promise((resolve, reject) => {
-            setTimeout(() => {
-                if (
-                    (id === 'ellie' && password === 'dream') ||
-                    (id === 'coder' && password === 'academy')
-                ) {
-                    resolve(id);
-                } else {
-                    reject(new Error('not found'));
-                }
-            }, 2000);
-        });
-    }
-
-    getRoles(user) {
-        return new Promise((resolve, reject) => {
-            setTimeout(() => {
-                if (user === 'ellie') {
-                    resolve({ name: 'ellie', role: 'admin' });
-                } else {
-                    reject(new Error('no access'));
-                }
-            }, 1000);
-        });
-    }
-}
-
-const userStorage = new UserStorage();
-const id = prompt('enter your id');
-const password = prompt('enter your password');
-userStorage
-    .loginUser(id, password)
-    .then(userStorage.getRoles)
-    .then((user) => alert(`hello ${user.name}, you have a ${user.role} role`))
-    .catch(console.log);
 ```
