--- a/_posts/2021-03-15-promise.md
+++ b/_posts/2021-03-15-promise.md
@@ -1,10 +1,10 @@
 ---
-title: Javascript(10) - 비동기 처리의 시작 콜백 이해하기, 콜백 지옥 체험😱
+title: Javascript(10) - Promise 개념부터 활용까지
 categories: [study]
 comments: true
 ---
 
-### 드림코딩 엘리 Javascript 강의 (8) - 비동기 처리의 시작 콜백 이해하기, 콜백 지옥 체험 😱fukuoka
+### 드림코딩 엘리 Javascript 강의 (8) - Promise 개념부터 활용까지
 
 ```js
 'use strict';
@@ -74,5 +74,44 @@ getHen()
     // })
     .then(cook)
     .then(console.log)
+    .catch(console.log);
+
+//Callback Hell example
+class UserStorage {
+    loginUser(id, password) {
+        return new Promise((resolve, reject) => {
+            setTimeout(() => {
+                if (
+                    (id === 'ellie' && password === 'dream') ||
+                    (id === 'coder' && password === 'academy')
+                ) {
+                    resolve(id);
+                } else {
+                    reject(new Error('not found'));
+                }
+            }, 2000);
+        });
+    }
+
+    getRoles(user) {
+        return new Promise((resolve, reject) => {
+            setTimeout(() => {
+                if (user === 'ellie') {
+                    resolve({ name: 'ellie', role: 'admin' });
+                } else {
+                    reject(new Error('no access'));
+                }
+            }, 1000);
+        });
+    }
+}
+
+const userStorage = new UserStorage();
+const id = prompt('enter your id');
+const password = prompt('enter your password');
+userStorage
+    .loginUser(id, password)
+    .then(userStorage.getRoles)
+    .then((user) => alert(`hello ${user.name}, you have a ${user.role} role`))
     .catch(console.log);
 ```
