--- a/_posts/2021-03-16-clock.md
+++ b/_posts/2021-03-16-clock.md
@@ -92,3 +92,10 @@ let clockStart = setInterval(function(){
     }
 }, 1000);
 ```
+✔포인트<br>
+1. 요일은 일요일~토요일은 0~6이라는 숫자를 가져오기 때문에 요일 배열을 만들어서
+배열의 인덱스 번호로 가져와야 한다.
+2. Month는 1을 더해줘야 한다.
+3. 실시간 시계이기 때문에 setInterval() 함수를 사용하여 1초에 한번씩 호출한다.
+
+
