--- a/_posts/2021-03-17-test.md
+++ b/_posts/2021-03-17-test.md
@@ -6,7 +6,7 @@ comments: true
 
 <html lang="en">
 <head>
-    <script src="/practice/js/jquery-3.5.1.min.js"></script>
+    <script src="../practice/js/jquery-3.5.1.min.js"></script>
     <style>
         *{
             margin: 0;
