--- a/_posts/2021-03-17-test.md
+++ b/_posts/2021-03-17-test.md
@@ -6,7 +6,11 @@ comments: true
 
 <html lang="en">
 <head>
-    <script src="../practice/js/jquery-3.5.1.min.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="/practice/js/jquery-3.5.1.min.js"></script>
     <style>
         *{
             margin: 0;
@@ -37,7 +41,6 @@ comments: true
         }
     </style>
 </head>
-
 <body>
     <div class="age-box" style="margin-bottom:50px;">
          <input type="text" id="userYear" placeholder="태어난 연도를 입력하세요">
